daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: apache
  labels:
    name1: test1
spec:
  selector:
    matchLabels:
      name: apache
  template:
    metadata:
      labels:
        name: apache
    spec:
      containers:
      - name: httpd
        image: httpd
