deplyment-defination.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: myapp-deployment
  labels: 
   app: myapp
   type: frontend
spec:
  template:
    metadata: 
     name: myapp-pod
     labels:
      app: myapp
    spec:
     containers: 
      - name: nginx-containes
        image: nginx       
  replicas: 3
  selector:
    matchLabels:
      app: myapp
