limit-resource.yml
##kubectl create namespace testproject1 
apiVersion: v1
kind: Pod
metadata:
  name: cpu-demo0
  namespace: testproject1
spec:
  containers:
  - name: cpu-demo-ctr
    image: vish/stress
    resources:
      limits:
        cpu: "1"
      requests:
        cpu: "0.5"
    args:
    - -cpus
    - "2"
