pod-defination.yml
apiVersion: v1
kind: Pod
metadata:
 name: myapp-pod
 label:
   app: myapp
   type: frontend
spec:
 container:
   - name: nginx-container
     image: nginx
