service-defination.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
   - targetPort: 80
     port: 80
     nodePort: 30008
  selector:
     app: myapp  #label of pods that we already defined in yaml file while creating replicaset and deployment
