NetworkPolicy-Ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: testing
spec:
  podSelector:
    matchLabels:
      app: web
  ingress: []
